# EA701

./: .gitignore
aula3/c/: main.c
aula3/codigoInicial/c/: main.c
aula3/codigoPOO/c/: CMakeLists.txt  main.c
aula3/codigoPOO/microPy/: main.py
aula3/exp1/codigoInicial/c/: CMakeLists.txt
aula3/exp1/codigoInicial/microPy/: main.py
aula3/exp1/codigoPOO/c/: CMakeLists.txt  main.c
aula3/exp1/codigoPOO/microPy/: main.py
aula3/exp2/c/: CMakeLists.txt  main.c
aula3/exp3/c/: main.c
aula3/exp3/python/: main.py
aula3/exp4/c/: main.c
aula3/exp4/python/: main.py
aula4/c/: CMakeLists.txt  main.c
aula5/: grafico.py
aula5/c/: joystick.c  main.c
aula5/relatorio/: aula5_salles_miguel.tex
aula6/EscritaFlash/c/: main.c
aula6/EscritaFlash/python/: main.py
aula6/audio/python/: audio.txt  main.py  wav.py
aula6/tempoRam/c/: main.c
aula6/tempoRam/python/: main.py
